--- a/vllm-infer.ipynb
+++ b/vllm-infer.ipynb
@@ -1964,11 +1964,11 @@
     "        enable_chunked_prefill=True,\n",
     "        enable_prefix_caching=True,\n",
     "        tensor_parallel_size=1,\n",
-    "        speculative_config={\n",
-    "            \"model\": \"zbyzby/Llama-3.2-1B-Instruct-GPTQ-Quant\",\n",
-    "            \"draft_tensor_parallel_size\": 1,\n",
-    "            \"num_speculative_tokens\": 5,\n",
-    "        },\n",
+    "        # speculative_config={\n",
+    "        #     \"model\": \"zbyzby/Llama-3.2-1B-Instruct-GPTQ-Quant\",\n",
+    "        #     \"draft_tensor_parallel_size\": 1,\n",
+    "        #     \"num_speculative_tokens\": 5,\n",
+    "        # },\n",
     "        compilation_config={\n",
     "            \"backend\": \"inductor\",\n",
     "            \"custom_ops\": [\"vllm_ops\"],\n",
